--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
+      "source": "/api/proxy",
+      "destination": "https://bronx-api-sable.vercel.app/search"
     }
   ]
 }
