--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     { 
       "source": "/api/number", 
-      "destination": "https://bronx-api-sable.vercel.app/search" 
+      "destination": "https://rajput-api.vercel.app/search" 
     },
     { 
       "source": "/api/vehicle", 
